# sandbox

./: .clang-format  .gitignore  README.md  autobuild.py  autoclean.py
boost/: CMakeLists.txt
boost/src/: CMakeLists.txt  boost_optional.cc
build_utils/: common.cmake
build_utils/python/: logging.py
build_utils/toolchains/: aarch64-gnu-toolchain.cmake  arm-gnu-toolchain.cmake  x86_64-clang-toolchain.cmake  x86_64-gnu-toolchain.cmake
cpp11/: CMakeLists.txt  Makefile  README.md
cpp11/src/: CMakeLists.txt  futures.cc  logging.h  my_class.h  rangefor.cc  references.cc  shared_ptrs.cc  smart_ptrs.cc  tuples.cc  util.h
cpp17/: CMakeLists.txt  Makefile  README.md
cpp17/src/: BUILD  CMakeLists.txt  futures.cc  int_wrapper.h  lambdas.cc  logging.h  my_class.h  optional.cc  pairs.cc  rangefor.cc  references.cc  shared_ptrs.cc  smart_ptrs.cc  stl.cc  tuples.cc  util.h  vectors.cc
eigen/: CMakeLists.txt  README.md  example2.cc  hello_eigen.cc
eigen/src/: CMakeLists.txt  example2.cc  first_program.cc  hello_eigen.cc
experiments/: CMakeLists.txt  README.md
experiments/src/: CMakeLists.txt  east_west_const.cc  enumerate.hh  enumerate_example.cc  enumerate_v2.hh  enumerate_v2_example.cc  hashing.cc  namespaces.cc  optional_ref.cc  random.cc  smart_raw_pointers.cc  struct_by_value.cc
experiments/src/templates/: CMakeLists.txt  README.md  t1.cc  widget.hh  widget.inl
experiments/src/templates/class_template_deduction/: CMakeLists.txt  deduction.cc  deduction_dummy.hh  deduction_dummy.inl
experiments/src/templates/crtp/: CMakeLists.txt  mpi.cc  naive.cc  omp.cc
experiments/src/templates/crtp/matmul/: matrix_multiply.hh  matrix_multiply_mpi.hh  matrix_multiply_omp.hh
experiments/src/templates/crtp/matrix/: matrix.hh
learn/: CMakeLists.txt
learn/src/: CMakeLists.txt  template_intro.cc  template_meta_1.cc  template_meta_2.cc
learn/src/adl/: CMakeLists.txt  CustomHiddenSwapClass.cc  CustomHiddenSwapClass.hh  CustomSwapClass.cc  CustomSwapClass.hh  NoCustomSwapClass.cc  NoCustomSwapClass.hh  adl_example_1.cc
learn/src/crtp/: CMakeLists.txt  comparisons.cc  simple_example.cc  simple_example_v2.cc  tree_example.cc
learn/src/fluent_cpp/: CMakeLists.txt  function_templates.cc  functors_vs_lambdas.cc  functors_vs_lambdas.cc.bak  helper_classes.cc  helper_classes.hh  mixins.cc  pretty_sfinae.cc
learn/src/fluent_cpp/expressive_types/: CMakeLists.txt  callable.cc  constructors.cc  conversions.cc  hashable.cc  inheritance.cc  interfaces.cc  lambdas.cc  references.cc
learn/src/fluent_cpp/expressive_types/circle/: circle.cc  circle.hh
learn/src/fluent_cpp/expressive_types/crtp/: crtp.hh  crtp.inl
learn/src/fluent_cpp/expressive_types/named_type/: named_type.hh  named_type_v1.inl  named_type_v2.inl  named_type_v3.inl  named_type_v4.inl
learn/src/fluent_cpp/expressive_types/rectangle/: rectangle.cc  rectangle.hh
learn/src/fluent_cpp/expressive_types/traits/: traits.hh  traits.inl  traits_operators.inl
learn/src/fluent_cpp/expressive_types/units/: units.cc  units.hh
learn/src/fluent_cpp/pointers/: CMakeLists.txt  custom_deleters.cc  knowing_your_pointers.cc
learn/src/fluent_cpp/pointers/pimpl/: CMakeLists.txt  engine.hh  fridge.cc  fridge.hh  pimpl.cc
learn/src/lambdas/: CMakeLists.txt  lambdas_from_scratch.cc
learn/src/ranges/: CMakeLists.txt  get_ranges.sh  hello_ranges.cc  intro.cc
learn/src/stl_compliant/: CMakeLists.txt  DirectedGraph.hh  DirectedGraph.inl  GraphHelpers.inl  GraphIterators.inl  GraphNode.hh  GraphNode.inl  data_structures.cc
learn/src/template_meta/: CMakeLists.txt  compile_time_loops.cc  compile_time_loops_v2.cc
learn/src/templates/: CMakeLists.txt  partial_specialization.cc  sfinae.cc  template_intro.cc  template_meta_1.cc  template_meta_2.cc
learn/src/type_traits/: CMakeLists.txt  add_reference.cc  remove_reference.cc
learn/src/variadic_templates/: CMakeLists.txt  basic_example.cc  catch_all.cc  my_tuple.cc  simple_pattern_matching.cc
opencv/: CMakeLists.txt
opencv/src/: CMakeLists.txt  CascadeClassifier.cc  DisplayImage.cc  LoadModifySaveImage.cc
scripts/: fix.sh  sandbox.py  setup_paths.sh  tofu.py
